support near and far layout

--- a/bwapp/client/views/partials/top-navbar.ng.jade
+++ b/bwapp/client/views/partials/top-navbar.ng.jade
@@ -64,7 +64,14 @@ nav.navbar.topnavbar(role="navigation")
             a(href="/tasks")
               .fa.fa-inbox
               | &nbsp;Tasks
-
+          li
+            a(href="/genworld")
+              .fa.fa-cubes
+              | &nbsp;Generate
+          li
+            a(href="/gengallery")
+              .fa.fa-sitemap
+              | &nbsp;States
       li
         a
           meteor-include(src="_loginButtons")
