--- a/bwapp/client/views/genworld.ng.jade
+++ b/bwapp/client/views/genworld.ng.jade
@@ -4,22 +4,42 @@
   =========================================================*/
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row-fluid.col-sm-12
-  div(style='margin-top: 14px', ng-if='!isgen')
-    form.form-inline.ng-pristine.ng-valid(name='myform', ng-submit='startGen(ccnt, itr)')
-      .form-group
-        label Cube Count: 
-        select.form-control(ng-model='ccnt')
-          option(ng-repeat='i in cubeprops track by $index', value='{{$index+1}}') {{$index+1}}
-      label &nbsp;&nbsp;&nbsp;
-      .form-group
-        label Generate Iterations:
-        select.form-control(ng-model='itr')
-          each v in [1, 2, 10,40,80,160,320]
-            option(value='#{v}') #{v}
-      button.btn.btn-default(type='submit') Go
+  h3 Generate Initial State
+  .row-fluid.col-sm-3
+    div(style='margin-top: 14px', ng-if='!isgen')
+      form.form-inline.ng-pristine.ng-valid(name='myform', ng-submit='startGen(ccnt, itr, ltyp)')
+        .form-group
+          label Cube Count: 
+          select.form-control(ng-model='ccnt')
+            option(ng-repeat='i in cubeprops track by $index', value='{{$index+1}}') {{$index+1}}
+        label &nbsp;&nbsp;&nbsp;
+        br
+        .form-group
+          label Generate Iterations:
+          select.form-control(ng-model='itr')
+            each v in [1, 2, 10,40,80,160,320,640]
+              option(value='#{v}') #{v}
+        br
+        .form-group
+          label Layout Type:
+          select.form-control(ng-model='ltyp')
+            each v in ['near', 'far']
+              option(value='#{v}') #{v}
+        br
+        button.btn.btn-default(type='submit') Go
+  .row-fluid.col-sm-4
+    div
+      h4(ng-show='curitr') Iteration: {{curitr-1}}
+      canvas(id="renderCanvasBab", style='width: 320px; height: 220px;')
+      canvas(id="canvas_2D")
+.row-fluid.col-sm-12
   hr
-  h3(ng-show='dbid') Iteration: {{curitr}}  Render for: {{dbid}}
-  div(style="position: absolute; z-index: 10;" class="col-sm-12")
+  .well.row
+    h3 Gallery
+    br
+    #galleryarea
+
+  //-div(style="position: absolute; z-index: 10;" class="col-sm-12")
     div(style='margin-top: 14px')
       button.btn.btn-sm(ng-click='resetWorld();')
         .fa.fa-refresh(style='color:#fff') 
@@ -28,19 +48,9 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         .fa.fa-image(style='color:#fff') 
           strong Show
 
-  div(ng-repeat='state in states track by $index')
-    .well {{$index}}
-      br
-      div(ng-repeat='s in state')
-        strong {{s.prop}}
-        | &nbsp;&nbsp;
-        i {{s.pos}}
-        br
-  canvas(id="renderCanvasBab" style='width: 640px; height: 440px;')
-  canvas(id="canvas_2D")
-  canvas(id="screencap", style='width: 640px; height: 440px;')
-  canvas(id="screendisp", style='width: 640px; height: 440px;')
-form(name='annotform')
+//-  canvas(id="screencap", style='width: 640px; height: 440px;')
+//-  canvas(id="screendisp", style='width: 640px; height: 440px;')
+//-form(name='annotform')
   div(ng-show='myreplay.keyframes.length', ng-repeat = 'kf in myreplay.keyframes')
     .row-fluid.col-sm-12(style='border-bottom:solid 2px #eee;')
       h2 Frame {{kf}}
