support testing of moving states

--- a/bwapp/client/views/genworld.ng.jade
+++ b/bwapp/client/views/genworld.ng.jade
@@ -35,6 +35,19 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               option(value='#{v}', ng-selected='ltyp==#{v}') #{v}
         br
         button.btn.btn-default(type='submit') Go
+      br
+      form.form-inline.ng-pristine.ng-valid(name='myshowform', ng-submit='showState(sid)')
+        .form-group
+          label Show State:
+          input(type='text', ng-model='sid')
+          input(type="submit", style="position: absolute; left: -9999px; width: 1px; height: 1px;")
+      br
+      form.form-inline.ng-pristine.ng-valid(name='mytestform', ng-submit='testState(sid)')
+        .form-group
+          label Test State Move:
+          input(type='text', ng-model='sid')
+          input(type="submit", style="position: absolute; left: -9999px; width: 1px; height: 1px;")
+
   .row-fluid.col-sm-4
     div
       h4(ng-show='curitr') Iteration: {{curitr-1}}
