update gen task to gen jobs

--- a/bwapp/client/views/partials/top-navbar.ng.jade
+++ b/bwapp/client/views/partials/top-navbar.ng.jade
@@ -57,9 +57,9 @@ nav.navbar.topnavbar(role="navigation")
               .fa.fa-sitemap
               | &nbsp;Gallery
           li
-            a(href="/gentasks")
+            a(href="/genjobs")
               .fa.fa-inbox
-              | &nbsp;Tasks
+              | &nbsp;Jobs
         li.dropdown(ng-show='currentUser.profile.roles.indexOf("admin") >= 0')
           a.dropdown-toggle(data-toggle="dropdown", href="#")
             //-i.glyphicon.glyphicon-search
