--- a/bwapp/client/views/genjobs.ng.jade
+++ b/bwapp/client/views/genjobs.ng.jade
@@ -1,34 +1,34 @@
 //-**=========================================================
-  * Module: gentasks.ng.jade
+  * Module: genjobs.ng.jade
   * Created by wjwong on 9/23/15.
   =========================================================*/
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row-fluid
   h2 State and Action Tasks
   h3 Create
-  form.form-inline.ng-pristine.ng-valid(name='myform', ng-submit='startGen(ccnt, (cstate)?undefined:itr, cstate)')
+  form.form-inline.ng-pristine.ng-valid(name='myform', ng-submit='taskGen(tasktype, cstate, bundle, asncnt, antcnt)')
     .form-group(style='margin-right: 10px')
       label Task Type:
-      select.form-control(ng-model='tasktype', ng-init='tasktype="action')
+      select.form-control(ng-model='tasktype', ng-init='tasktype="action"')
         each v in ['state', 'action']
-          option(value='#{v}', ng-selected='tasktype==#{v}') #{v}
+          option(value='#{v}', ng-selected='tasktype=="#{v}"') #{v}
     .form-group(style='margin-right: 10px')
       label State: 
       select.form-control(ng-model='cstate', ng-init='cstate=0')
-        option(ng-repeat='state in stateslist', value='{{state.stateid}}', ng-selected='cstate==(state.stateid)') {{state.stateid}}
+        option(ng-repeat='state in statenum', value='{{state}}', ng-selected='cstate==(state)') {{state}}
     .form-group(style='margin-right: 10px', title='Number of jobs to bundle per task')
       label Bundle By:
-      select.form-control(ng-model='bundle')
+      select.form-control(ng-model='bundle', ng-init='bundle=(tasktype=="action")?10:5')
         each v in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
           option(value='#{v}', ng-selected='bundle==#{v}') #{v}
     .form-group(style='margin-right: 10px', title='# of Turks to use per bundle of work')
       label # Turk Assignments:
-      select.form-control(ng-model='asncnt')
+      select.form-control(ng-model='asncnt', ng-init='asncnt=3')
         each v in [1, 2, 3, 4, 5, 6, 7, 8, 9]
           option(value='#{v}', ng-selected='asncnt==#{v}') #{v}
     .form-group(style='margin-right: 10px', title='# of annotations per assignment')
       label # of Annotations:
-      select.form-control(ng-model='antcnt')
+      select.form-control(ng-model='antcnt', ng-init='antcnt=3')
         each v in [1, 2, 3]
           option(value='#{v}', ng-selected='antcnt==#{v}') #{v}
     button.btn.btn-default(type='submit') Go
