--- a/bwapp/client/views/genworld.ng.jade
+++ b/bwapp/client/views/genworld.ng.jade
@@ -5,31 +5,38 @@
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row-fluid.col-sm-12
   h3 Block Meta Data
-  .content.col-sm-4(ng-show='!blockmeta')
-    form.form-inline.ng-pristine.ng-valid.well(role="form",novalidate, name='importstateform', ng-submit='loadState()')
-      b Import State
-      .form-group
-        input.form-control#sfn(type='file', name='lsf', accept=".json", single, onchange="angular.element(this).scope().stateFileChanged(event)")
-        button.btn.btn-default(type="submit", ng-show='statefilename') Go
-  .content.col-sm-4(ng-show='!blockmeta')
-    form.form-inline.ng-pristine.ng-valid.well(role="form",novalidate, name='importmetaform', ng-submit='loadMeta()')
-      b Import Meta
-      .form-group
-        input.form-control#sfn(type='file', name='lsf', accept=".json", single, onchange="angular.element(this).scope().metaFileChanged(event)")
-        button.btn.btn-default(type="submit", ng-show='metafilename') Go
-  .content.col-sm-3(ng-show='!blockmeta')
-    form.form-inline.ng-pristine.ng-valid.well(name='usemetastateform', ng-submit='showState(msid)')
-      .form-group
-        label Use State:
-        input(type='text', ng-model='msid', placeholder='state id')
-        input(type="submit", style="position: absolute; left: -9999px; width: 1px; height: 1px;")
-  div(ng-show='blockmeta')
-    h4 # Blocks: {{blockmeta.blocks.length}}
-    span(ng-repeat='block in blockmeta.blocks')
-      | &nbsp;&nbsp;
-      button.btn.btn-xs.btn-default {{block.id}} &nbsp; {{block.name | uppercase}}
-    div
-      button.btn.btn-primary(ng-click='clearMeta()') Reset
+  .row.mb-sm(ng-show='!blockmeta')
+    .content.col-sm-3
+      button.btn.btn-default(ng-show='showLogos', ng-click='showLogos=false')
+        .fa.fa-toggle-on &nbsp;Hide Logos
+      button.btn.btn-default(ng-show='!showLogos', ng-click='showLogos=true')
+        .fa.fa-toggle-off &nbsp;Show Logos
+  .row
+    .content.col-sm-4(ng-show='!blockmeta')
+      form.form-inline.ng-pristine.ng-valid.well(role="form",novalidate, name='importstateform', ng-submit='loadState()')
+        b Import State
+        .form-group
+          input.form-control#sfn(type='file', name='lsf', accept=".json", single, onchange="angular.element(this).scope().stateFileChanged(event)")
+          button.btn.btn-default(type="submit", ng-show='statefilename') Go
+    .content.col-sm-4(ng-show='!blockmeta')
+      form.form-inline.ng-pristine.ng-valid.well(role="form",novalidate, name='importmetaform', ng-submit='loadMeta()')
+        b Import Meta
+        .form-group
+          input.form-control#sfn(type='file', name='lsf', accept=".json", single, onchange="angular.element(this).scope().metaFileChanged(event)")
+          button.btn.btn-default(type="submit", ng-show='metafilename') Go
+    .content.col-sm-3(ng-show='!blockmeta')
+      form.form-inline.ng-pristine.ng-valid.well(name='usemetastateform', ng-submit='showState(msid)')
+        .form-group
+          label Use State:
+          input(type='text', ng-model='msid', placeholder='state id')
+          input(type="submit", style="position: absolute; left: -9999px; width: 1px; height: 1px;")
+    div(ng-show='blockmeta')
+      h4 # Blocks: {{blockmeta.blocks.length}}
+      span(ng-repeat='block in blockmeta.blocks')
+        | &nbsp;&nbsp;
+        button.btn.btn-xs.btn-default {{block.id}} &nbsp; {{block.name | uppercase}}
+      div
+        button.btn.btn-primary(ng-click='clearMeta()') Reset
 .row-fluid.col-sm-12
   hr
 .row-fluid.col-sm-12(ng-show='blockmeta')
